# stock-monitor

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Demo.smpf  LICENSE  README.md  SECURITY.md  StockMonitor.flatpakref  build_deb.sh  build_exe.bat  build_rpm.sh  ch.stock-monitor.StockMonitor.desktop  config.py  create_release_zip.bat  dividend_lists.json  etf_holdings.py  help_texts.py  install.sh  io.github.StockMonitorCH.stock-monitor.metainfo.xml  market_data.py  meson.build  portfolio_analysis.py  portfolio_analysis_extended.py  portfolio_analysis_texts.py  portfolio_db.py  stock-monitor-flatpak.sh  stock-monitor.desktop  stock-monitor.sh  stock-monitor.spec  stock_monitor.py  tax_module.py  tax_translations.py  translations.py  world_map.py
.github/workflows/: build-flatpak.yml
HomePage/: index.html
HomePage/en/: index.html
fp/: BUILD.md  ch.stock-monitor.StockMonitor.yml  ch.stockmonitor.StockMonitor.yml  io.github.StockMonitorCH.stock-monitor.metainfo.xml  io.github.StockMonitorCH.stock-monitor.yml  python3-deps.yaml  requirements-clean.txt  requirements-clean2.txt  requirements.txt
fp/sources/: ch.stock-monitor.StockMonitor.metainfo.xml  contourpy-1.3.2-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  help_texts.py  io.github.StockMonitorCH.stock-monitor.desktop  io.github.StockMonitorCH.stock-monitor.metainfo.xml  kiwisolver-1.5.0-cp314-cp314-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  peewee-4.0.4-py3-none-any.whl  portfolio_db.py  stock_monitor.py  translations.py  world_map.py  yfinance-1.2.2-py2.py3-none-any.whl  yfinance-1.3.0-py2.py3-none-any.whl  yfinance-1.4.0-py2.py3-none-any.whl
repo/: summary  summary.idx  summary.sig
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/summaries/: 010650baf8a8c4dbd67f98e15af9bf71740f4698b296cf63b2ed618996a72f70-be6e217d2d0cafe4b8395595d3bd6ec965b5cb5f3fe8b1ca4ffe3e9ea85bf0cf.delta  0342bfb7ef1524d15ce06dc56dd14c902ee748142123278c6b538605312cbc4b-dfc1e08f6c947cf9d459627714803109d91446a21d7cff371cc859bec7c5f3b6.delta  0850485a5281255fdc2b63a76e13df936fda1c9024bfd7903449027a4f2c3c3a-353398b25da75313e5c75b3b09dd633ff83eef1a08040cfb854a3055bc624c49.delta  (+104 more)
(+6 files in other folders)
